--- a/index.html
+++ b/index.html
@@ -107,9 +107,7 @@
 <div>и избавим от вредителей
 </div><div>в Барнауле и Алтайском крае</div></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    При заказе через сайт -10%
-                </p>
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">При заказе через сайт -10%</p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-primary display-4" href="popup:#mbr-popup-d" data-toggle="modal" data-target="#mbr-popup-d">Расчитать стоимость</a></div>
             </div>
         </div>
@@ -520,7 +518,7 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="EZrdfGq5aRSAGfpi8yeN0sHm0R046c0ybyOdQ/HswslggOvmMfA+mWVuFUQ3GEuQNZ2rpgsJhiMNIEEbHupN0r/DqB9tD6PIZl1TSNzJqUsH774Z2KzWgMwqWJ63K5nu.PcL23Nyl5UKSXfRQw43rlDq9E7NMyAAuQDhH3N4CbSKyN1TdgdhgEv2TwWoD2CDJZB69qLj/pniuqL7FA+ZaqSbfNYQyujh8q5S/zGp1gQTLRYWhdEGNn0vPkzyyj7zZ">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="bZRigbTo9uND6uYksv//LdTPbkhHU7d5TTr5eUTq5U6jLBkLdG8yp7Fousxadbrv7/x95KNq8+0PwUYB1yz1/z3NNrcW+oLLDQojy3g4dwV19yCAbOirlUpKT89UQH2d.dAqrMCYezG2hev+ParzO9vGLdJNFDDi+cOCl2Gra/yH/eaY60fDr8SDjGEXwRobEnIT4eeFs8PnyrJINBAefp9dwM/4TiPNdnX1AzFP38XbA2xOAavEut3LFzTCTe8dK">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -591,7 +589,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Sy0hqIbtvsJa0bgrRb/6DWGcNY1V+NbfSw48UhBWX0Ef2sqRgsLWFBOpMxKSsyVXR0uKj6RSgO8bx6mjC17zpRYKC6euLGZXARtJTwlkjrPOxCGeocASNhVYpNXkWawv.XZo6F7X+uzVmAHLOxC3mmpnk4mhVV8Qtj1XOhorhrnFeusNEbHd+7i4Px7fFQvIdxPyMTDyJsub7NDDkYxHOv5scbDD67HiBL2TzTKw1ByAFS0luDANtGb1pWBoke2pL">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="DvzrIgAVhI24atZhk1JM3UxVcHN888gE8hn23drTaOQ3dzSbhQxnDqFiSofdNWuKzpRYNYyxQ2MRtINB2uECT6rCTTRHFQjBZZRMflRFxd99zLpxH5jqCISjNmQZKCL5.xYA/oRrNzEcMklrQL2IxWRgxMyFKhzlR5XR8cAg3Y1ozD6uN7J87NWbsloCVs146FK/zExO+iWBZM1syrSIxeuo5hdcghPUFKC3q5BKV99bngUQqg/MS6iFALrEAeWEz">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
