sections paddings, contact form fields

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div id="collapse3_2" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#bootstrap-accordion_2">
                                 <div class="panel-body p-4">
                                     <p class="mbr-fonts-style panel-text display-7">
-                                       Уже через 3-4 часа вы сможете использовать помещение. Препараты проходят тщательное испытание и действуют уже через 30 минутю</p>
+                                       Уже через 3-4 часа вы сможете использовать помещение. Препараты проходят тщательное испытание и действуют уже через 30 минут.</p>
                                 </div>
                             </div>
                         </div>
@@ -516,7 +516,7 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="SZKi5fwJV1F7EHEr10Ti2Ugo2PEps0pjL7U1PmCbbMAl+stU3yGXGbtTXYzlqXRjnP/FoBRk9clRiAcuKKsDYYeC3K4ap3/KJjl2tVja7BMP3dEq3Uc8ZOg307GaINDF.vqhQIbKMiUT8wOQ9LYy0OVolg9bAHCy6pVP0rkhRdsOanpdpJj0Ken7hN5/DtSoUi3/ribuP074qm4gkgHlHG/hYF2LpRpRicPnFQD9b5COzhaAG/QJcB7ckNxsit94n">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LBbej2RlLPzN8GmXFH4MsRU8L4BYTADLBPIpPzp/xasxU3fWcQnRmOXTbWkgBqefom0020wTaGIaBKuS/rTg4oQMAtrB1q/b/8qW4Si1WxbDAaLs8bGZPTIY6xSzsumn.Rrqks5E4qkyyJZ7AxfgrlOP38DZNLiGPO+ZYbHyVRkB0Z/eUPVDnGRSWE88lPa0uVgDMlq9UxY7VkkCJEBQ4fvwoBgQyEHACEaE6wlyYxqc8HGaNj1IMnywBcaegSq1T">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -525,11 +525,11 @@
 <div class="col-md-12 form-group" data-for="fio">
 <input type="text" name="fio" placeholder="Имя" data-form-field="Name" class="form-control display-7" value="" id="fio-extContacts3-9">
 </div>
-<div class="col-md-12 form-group" data-for="email">
-<input type="text" name="email" placeholder="E-mail *" data-form-field="E-mail" required="required" class="form-control display-7" value="" id="email-extContacts3-9">
+<div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="contact">
+<input type="text" name="contact" placeholder="Телефон или Email *" data-form-field="contact" class="form-control display-7" required="required" value="" id="contact-extContacts3-9">
 </div>
-<div data-for="text" class="col-md-12 form-group">
-<textarea name="text" placeholder="Сообщение *" data-form-field="Message" required="required" class="form-control display-7" id="text-extContacts3-9"></textarea>
+<div class="col-md-12 form-group" data-for="text1">
+<textarea name="text1" placeholder="Сообщение *" data-form-field="Message" required="required" class="form-control display-7" id="text1-extContacts3-9"></textarea>
 </div>
 <div class="col-md-12 input-group-btn">
 <button type="submit" class="btn btn-form btn-primary display-4">Отправить</button>
@@ -587,7 +587,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1X556nAnYEvoTVMEombG+OC10UlZSiQ/UNn/M4rOp+RUtsqOs9C5Jrf4v6dHD7hJR10/Wd0IX1zpoQmJqYaWQuxTmoKb89uvS3pHhqfmyR3VZgdCBmSVn7GRfqnM0BsY.0OSDwG1Ol4VhoUijGiHRJDRgR6EP/rOKpSCncj0KcomhqeH170WgzmMm9D5RsGpz5/qUFPSN2lI77o/uGTrCRrSpPqtYfsckJ+fkD60L6U+Ml7rYQTgSrk2kMo60sg7y">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pk1YjhciUOY3Mxsv2og+uFyzQwOaO6Obtfp5hqR6R4vt445RZ4LWV5qTH8+myIPKIJ+X3rPQ7e2ynbXk1oBwUmPeZPh4rq4DR8Fn/3TPCKQGX4rBBTNHMm/Pr9U5yBYY.j1cCmnC1TNMo4U96gl5isGY4K7ZiP2hDCABQOmqCJtEiL4zjYtgsTBWhl5fUW64exSgC/rdyYSMjvjG/M/slWjrWXl2EaqzyDOAwhxey7F4lTlzYtMNC2pmPFbp64Zqg">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
