--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>ДЕЗслужба Лето без комаров</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -362,7 +362,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style pb-1 mbr-bold display-5">Ликвидация сорных растений</h4>
-                        <p class="mbr-text mbr-fonts-style mbr-normal display-4"><strong>уничтожение или ослабление неприятных запахов путем поглощения, или разрушения пахучих веществ, приостановки процессов их образования</strong></p>
+                        <p class="mbr-text mbr-fonts-style mbr-normal display-4"><br></p>
 
                       
 
@@ -381,7 +381,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title mbr-fonts-style pb-1 mbr-bold display-5">Дезодорация помещения</h4>
-                        <p class="mbr-text mbr-fonts-style mbr-normal display-4"></p>
+                        <p class="mbr-text mbr-fonts-style mbr-normal display-4"><strong>уничтожение или ослабление неприятных запахов путем поглощения, или разрушения пахучих веществ, приостановки процессов их образования</strong></p>
 
                      
 
@@ -516,7 +516,7 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="LBbej2RlLPzN8GmXFH4MsRU8L4BYTADLBPIpPzp/xasxU3fWcQnRmOXTbWkgBqefom0020wTaGIaBKuS/rTg4oQMAtrB1q/b/8qW4Si1WxbDAaLs8bGZPTIY6xSzsumn.Rrqks5E4qkyyJZ7AxfgrlOP38DZNLiGPO+ZYbHyVRkB0Z/eUPVDnGRSWE88lPa0uVgDMlq9UxY7VkkCJEBQ4fvwoBgQyEHACEaE6wlyYxqc8HGaNj1IMnywBcaegSq1T">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WHhm7rqd0LU8cvwzlefdCS745nBkp4u5zp7Iw2Or/wXr3bSLODF9YkE9uYhSyf3C58I90Wj1IYtpLcq4QLmoBiAsNr+Pn6zzGcZy8NtJePXEc7CDSq5cJj/J4W9/GFqk.Sv7GgkDaJokalZqvFDoHzjo55uvv1ERCctjiB8MpCt3Flws4lM1hZ/DRjaTwjBLtInLBIYOWqskqgJxu9VJ9kFMtqGr6xo1pYXlvbYFhAxsYRfQfBXA2M3Xi5beBNTDH">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -587,7 +587,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Pk1YjhciUOY3Mxsv2og+uFyzQwOaO6Obtfp5hqR6R4vt445RZ4LWV5qTH8+myIPKIJ+X3rPQ7e2ynbXk1oBwUmPeZPh4rq4DR8Fn/3TPCKQGX4rBBTNHMm/Pr9U5yBYY.j1cCmnC1TNMo4U96gl5isGY4K7ZiP2hDCABQOmqCJtEiL4zjYtgsTBWhl5fUW64exSgC/rdyYSMjvjG/M/slWjrWXl2EaqzyDOAwhxey7F4lTlzYtMNC2pmPFbp64Zqg">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Kn1WtLLGhFM4Pe1dKRe0EPcLXV/1Sd8uqaeJnIe9Yrnzv6hir2j3JA1gh638o0t9bsN5cSv0AjptiYdEpeUppH3fnsYQajzyg6nJuv/8oF5CRxpOwoIpK6Eh7U+bJwrb.ffgcVIKu1zdsCwZKVA+JGnCkteFuB+uSUYvRMREku8YR7wtpjT+jFeI9GjxeJqlV/LMYe2bkOS0Q2hkbteY1OOWP0RGGNAxZ6WCrn7zY2i2ZdU2ebiKVSyLyHW+Nieix">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
