--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                             <img src="assets/images/logo-122x103.png" alt="" title="" style="height: 3.8rem;">
                         </a>
                     </span>
-                    <span class="navbar-caption-wrap"><a href="#" class="brand-link mbr-black display-7">ДЕЗслужба<br>лето без комаров</a></span>
+                    <span class="navbar-caption-wrap"><a href="#" class="brand-link mbr-black display-7"><b>ДЕЗслужба</b><br>лето без комаров</a></span>
                 </div>
             </div>
             <div class="menu-content-right">
