--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="WHhm7rqd0LU8cvwzlefdCS745nBkp4u5zp7Iw2Or/wXr3bSLODF9YkE9uYhSyf3C58I90Wj1IYtpLcq4QLmoBiAsNr+Pn6zzGcZy8NtJePXEc7CDSq5cJj/J4W9/GFqk.Sv7GgkDaJokalZqvFDoHzjo55uvv1ERCctjiB8MpCt3Flws4lM1hZ/DRjaTwjBLtInLBIYOWqskqgJxu9VJ9kFMtqGr6xo1pYXlvbYFhAxsYRfQfBXA2M3Xi5beBNTDH">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1A0QVIyqu3qdRnABZ7RIGXdB2IkxuROBVw1mZ3u8I7dtNTOwrdld6NblNtPCTHRKPGVVwgXM8fEzrYeDPEdTv1pcLcIhPW2zMAo+fD3CIzx/wNhQa0bXrn+fMB9YHC1w.IoznsIZo5Dft70W4ud3B6+H9K0D+x5qzLXm6Rp48dpmidbHUee9WkS1dzm6vX17vWppXLyIKzRaKrjJaFx5SCJP6lf91LYHWgn0kdAtzmflaLb+BRdzc50TrS2Yk0VZU">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -566,7 +566,7 @@
     </div>
 </section>
 
-<div class="modal mbr-popup cid-s0PEHTmezA fade" tabindex="-1" role="dialog" data-overlay-color="#000000" data-overlay-opacity="0.8" id="mbr-popup-d" aria-hidden="true">
+<div class="modal mbr-popup cid-s0PEHTmezA fade" tabindex="-1" role="dialog" data-overlay-opacity="0.8" data-overlay-color="#000000" id="mbr-popup-d" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -587,7 +587,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Kn1WtLLGhFM4Pe1dKRe0EPcLXV/1Sd8uqaeJnIe9Yrnzv6hir2j3JA1gh638o0t9bsN5cSv0AjptiYdEpeUppH3fnsYQajzyg6nJuv/8oF5CRxpOwoIpK6Eh7U+bJwrb.ffgcVIKu1zdsCwZKVA+JGnCkteFuB+uSUYvRMREku8YR7wtpjT+jFeI9GjxeJqlV/LMYe2bkOS0Q2hkbteY1OOWP0RGGNAxZ6WCrn7zY2i2ZdU2ebiKVSyLyHW+Nieix">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vd7FPaPykuTm4i51FMgyUvO1wGOlDlpi7R86HCbrUWDCFylBIOlu4AomJBrg5JrAgy1Wpznfvcgv1DPBzjhWa/37+yySm+txfeeqTLca2E35/PpnjcCv0FevykqkA1vR.bf8ZYavqZeDST/kqercIUH8rLsh3TGlyaXekTzJvbaVxzDhKl3zWmyqpId79GYWJf8m0Gnomd4oDOmnpQvLN2hA/tC/Tu9vHdOEFeBu5RhF5doQN9ZS8TKmukTHanuR0">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -614,21 +614,25 @@
 <div data-for="tip_rabot" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <label for="tip_rabot-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Тип обработки</label>
 <select name="tip_rabot" data-form-field="kind" class="form-control display-7" id="tip_rabot-mbr-popup-d">
-<option value="От насекомых">От насекомых</option>
+<option value="От комаров, клещей">От комаров, клещей</option>
+<option value="От клопов и тараканов">От клопов и тараканов</option>
 <option value="От вредителей">От вредителей</option>
+<option value="От сорных растений">От сорных растений</option>
 <option value="Дезодорация">Дезодорация</option>
-<option value="Плесень">Плесень</option>
+<option value="От муровейников">От муровейников</option>
 </select>
 </div>
 <div data-for="ploschad" class="col-lg-12 col-md-12 col-sm-12 form-group">
+<label for="ploschad-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Площадь</label>
 <div class="form-row">
 <input type="range" name="ploschad" min="0" max="2000" step="1" data-form-field="square" class="col display-7" value="50" id="ploschad-mbr-popup-d">
-<div class="col-auto">
+<div class="col-auto">кв.м.
 <span class="value form-control">50</span>
 </div>
 </div>
 </div>
 <div data-for="komnaty" class="col-lg-12 col-md-12 col-sm-12 form-group">
+<label for="komnaty-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Количество комнат</label>
 <div class="form-row">
 <input type="range" name="komnaty" min="0" max="10" step="1" data-form-field="komnaty" class="col display-7" value="3" id="komnaty-mbr-popup-d">
 <div class="col-auto">
