form email notification added

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1A0QVIyqu3qdRnABZ7RIGXdB2IkxuROBVw1mZ3u8I7dtNTOwrdld6NblNtPCTHRKPGVVwgXM8fEzrYeDPEdTv1pcLcIhPW2zMAo+fD3CIzx/wNhQa0bXrn+fMB9YHC1w.IoznsIZo5Dft70W4ud3B6+H9K0D+x5qzLXm6Rp48dpmidbHUee9WkS1dzm6vX17vWppXLyIKzRaKrjJaFx5SCJP6lf91LYHWgn0kdAtzmflaLb+BRdzc50TrS2Yk0VZU">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oIRKLrFnCJn6EtPiCfXrcrgo/F/5DDb+old/ZQVxd8xKp/cCST4S5SDy6+A0uvIP1OWCz1pd3nYi7mGkC25+IR1ZxHGDNKQUPuHW4FM/lcyhUIpfGv69hABwMpscNwwE.dPr/ArMvEYb2PMIoVab68A3DQRtF6ZQ0qtbCJeddeo1z6gXCmpe81NS5ovI8EV+EqGDIRaAQh+Y3qbYFERdowoSWOMcsnNQckrQukQMn8F4q2aDWKKWkw0AE2N52DGal">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -526,9 +526,9 @@
 <input type="text" name="fio" placeholder="Имя" data-form-field="Name" class="form-control display-7" value="" id="fio-extContacts3-9">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="contact">
-<input type="text" name="contact" placeholder="Телефон или Email *" data-form-field="contact" class="form-control display-7" required="required" value="" id="contact-extContacts3-9">
+<input type="text" name="contact" placeholder="Телефон или Email *" data-form-field="contact" required="required" class="form-control display-7" value="" id="contact-extContacts3-9">
 </div>
-<div class="col-md-12 form-group" data-for="text1">
+<div data-for="text1" class="col-md-12 form-group">
 <textarea name="text1" placeholder="Сообщение *" data-form-field="Message" required="required" class="form-control display-7" id="text1-extContacts3-9"></textarea>
 </div>
 <div class="col-md-12 input-group-btn">
@@ -587,7 +587,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vd7FPaPykuTm4i51FMgyUvO1wGOlDlpi7R86HCbrUWDCFylBIOlu4AomJBrg5JrAgy1Wpznfvcgv1DPBzjhWa/37+yySm+txfeeqTLca2E35/PpnjcCv0FevykqkA1vR.bf8ZYavqZeDST/kqercIUH8rLsh3TGlyaXekTzJvbaVxzDhKl3zWmyqpId79GYWJf8m0Gnomd4oDOmnpQvLN2hA/tC/Tu9vHdOEFeBu5RhF5doQN9ZS8TKmukTHanuR0">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1KUAuSf9l4MEO9cpwkgdouPtRq3r27X/iUmEqQzwRTW6cylUTR1x0jdP4wfSBId43HwFjLQw5icmMiI5EvQGVl4kvTiRizQ8TNJStP9h8WQ36crk4Pok/j/0NcXxeRce.5Jj+40K9xIj98ttcdiIUref7HBrZkUWCMs2Rd/dgWbbbu8mwExCchX2XclOR8gBA9cFrB88OaQfYhtENpSfC/fitdUEo5aEpQwn2L9a4pU/Zi/EvrFwHvv/+lJifZMna">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
