--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="Избавим вашу территорию от клещей, клопов, вредителей, неприятных запахов и вирусов">
   
   
   <title>ДЕЗслужба Лето без комаров</title>
@@ -26,8 +26,10 @@
   <link rel="stylesheet" href="assets/recaptcha.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
-  
-  
+  <script src="assets/web/assets/lazyload/lazyload.js"></script>
+
+  <meta name="description" content="Избавим вашу территорию от клещей, клопов, вредителей, неприятных запахов и вирусов">
+<meta name="Keywords" content="дезинсекция в Барнауле,   дезинфекция в Барнауле,  от клещей, от клопов, от вредителей, от неприятных запахов, дезслужба"> 
 
 </head>
 <body>
@@ -516,7 +518,7 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="oIRKLrFnCJn6EtPiCfXrcrgo/F/5DDb+old/ZQVxd8xKp/cCST4S5SDy6+A0uvIP1OWCz1pd3nYi7mGkC25+IR1ZxHGDNKQUPuHW4FM/lcyhUIpfGv69hABwMpscNwwE.dPr/ArMvEYb2PMIoVab68A3DQRtF6ZQ0qtbCJeddeo1z6gXCmpe81NS5ovI8EV+EqGDIRaAQh+Y3qbYFERdowoSWOMcsnNQckrQukQMn8F4q2aDWKKWkw0AE2N52DGal">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Ua82jXKFCSqzyX7SNu/jd/l/ZPKpoNuuX6et9Zzb0w1//gOzmsncm8D4MeQOqVw7pTTH/skTGER3fWNvIN+tAvElilODblPvXFBQ2pjyE9whst8wG41BihSyUiWiYoay.wcSebXvZIrWXz93adjOMgqqlWfxighHwhJ1SA6QOc1gCxxNqMVYe7x3bqfQH4UJO8ao+0gcnHZs22kwMqnz8nUSsSwnRAp3wKDfjdYOp7EuM/UdVLl5dQDVQDGunVvg+">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
@@ -587,7 +589,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="1KUAuSf9l4MEO9cpwkgdouPtRq3r27X/iUmEqQzwRTW6cylUTR1x0jdP4wfSBId43HwFjLQw5icmMiI5EvQGVl4kvTiRizQ8TNJStP9h8WQ36crk4Pok/j/0NcXxeRce.5Jj+40K9xIj98ttcdiIUref7HBrZkUWCMs2Rd/dgWbbbu8mwExCchX2XclOR8gBA9cFrB88OaQfYhtENpSfC/fitdUEo5aEpQwn2L9a4pU/Zi/EvrFwHvv/+lJifZMna">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Nm7c4pSm4O18cpe9ZKGQiJacZgDsYqMuj7IybfEnQd7N4W7IA03+QUCfUDpGN4yWkJsmTQVcXxd32RJBIODQGDd/53VebmXDtiii2/ycQlal6/mVRJatz/zAgxt5SIaC.PCkcAIo6xY/Zx7jwwU5qdbJ78tmLBR5da0J7aH9eJyrirUfYznfTtYLMRj7QgwkANggjHgqv3rvgDbKgeqkuIoFLVQ0cQM1kD4wUD3VKGCd5xRU6A/zVYmr9HkyU0oGU">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
