--- a/index.html
+++ b/index.html
@@ -517,20 +517,20 @@
                     Обратная связь</h3>
                 <div class="form-1" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="VtIa7UHiPxUWaWdwLBmzGxWAwIo+8cHA9fOuvjgeaaZQOjgEGGkyuIcVvtaCM/K8Ar5sDZ29MmVJ5dUOO0mfxGgEzyA8R2tmfOQSNHFD4KE+VgiduNPLh80FnxXaGHyh.BIxsnIfyv2WbYmCm9leZbOh3QywK/wclK9PouZwkTYdB3/e7vv2scCuV/dn/oiGyGhsSjIA81Y7Y9iFtwsTOBF2ybV18AX3EmG4kIvz0YpEpeXxlNxS67WjiB2dIUu9+">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="My Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="T1Y1lN7sl3dKEhxCx2o6VYDzqCHjjzH0ysc46ZPbncu+b8ASWCGQsPJ9alRkpc+l4cOra5ajMaV0+O7NKz18PugLp2S1Qg7wxDicnAuzCwIJLZ///gebQsZ4xwLIXQLx.WU32PzE/SrAnZH6cG7S/VAKbv2MK23HrYMYgvF8Iv2JMzJCW8+KP/0zyLL9P19GGYFukWCFS//PsLCZ0rvDUs+kAmTjlgo0WypVA+NrjlTll6jYM2dbM65eQLre0yZoS">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Ваше сообщение успешно отправлено! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> </div>
 </div>
 <div class="dragArea row">
 <div class="col-md-12 form-group" data-for="fio">
-<input type="text" name="fio" placeholder="Имя" data-form-field="Name" class="form-control display-7" value="" id="fio-extContacts3-9">
+<input type="text" name="fio" placeholder="Имя" data-form-field="Имя" class="form-control display-7" value="" id="fio-extContacts3-9">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="contact">
-<input type="text" name="contact" placeholder="Телефон или Email *" data-form-field="contact" required="required" class="form-control display-7" value="" id="contact-extContacts3-9">
+<input type="text" name="contact" placeholder="Телефон или Email *" data-form-field="Телефон или Email" required="required" class="form-control display-7" value="" id="contact-extContacts3-9">
 </div>
 <div data-for="text1" class="col-md-12 form-group">
-<textarea name="text1" placeholder="Сообщение *" data-form-field="Message" required="required" class="form-control display-7" id="text1-extContacts3-9"></textarea>
+<textarea name="text1" placeholder="Сообщение *" data-form-field="Сообщение" required="required" class="form-control display-7" id="text1-extContacts3-9"></textarea>
 </div>
 <div class="col-md-12 input-group-btn">
 <button type="submit" class="btn btn-form btn-primary display-4">Отправить</button>
@@ -588,7 +588,7 @@
 
                             <div class="form-wrapper" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="Dv2BJXVVZ5PR4SRwSNNn0gq9azHGdk1AwkDj1XVrm64CtFUNtu8QpGO7Pq/zlQ8W3WSoyQIKQryJJz+j9s8jnWGcpcffdABMl8nkFtfh2cnyVz14WZoirOTm+myQU3zI.jIzFMDkyTxgWYdYlWSjI1vX5HbHKerAA2kaPlU1EhlwIeBRdAujtsh6m0YUSJXZpeMvftaI2Pj7yEanc18zXiMsVNZY/n745mJFFB6xagO6Qt/Abd1SNUcB0EbHJ8INf">
+<form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="BTTCVBLmOCMeUdd41/Z/TElrN5UE2h38nLdm0u1mvlktgXJs/F5Ztps6uKzQINzSdbJG+oVs916MonA2uSHdq6t5sj/t5a2fscJ81lc62P7blScQ9Ud3FNlyGdD9vhBw.QorhhmPMM9cum4Lc/CdPLl5Hqjm9GC5ttAIKWGEDeaAE+dsm0tfUloeF1xtkO5mefThQNxfNGYE2CE1zOZdUDuuYwnNLMRGp7Nwy/VPTBWVfk3u95+sFdek3PV1tl9Do">
 <div class="">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Заявка успешно отправлена! С Вами свяжутся в ближайшее время</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -597,15 +597,15 @@
 <div class="dragArea">
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="fio">
 <label for="fio-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Имя</label>
-<input type="text" name="fio" data-form-field="name" class="form-control display-7" value="" id="fio-mbr-popup-d">
+<input type="text" name="fio" data-form-field="Имя" class="form-control display-7" value="" id="fio-mbr-popup-d">
 </div>
 <div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="telephone">
 <label for="telephone-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Телефон *</label>
-<input type="tel" name="telephone" data-form-field="phone" required="required" class="form-control display-7" value="" id="telephone-mbr-popup-d">
+<input type="tel" name="telephone" data-form-field="Телефон" required="required" class="form-control display-7" value="" id="telephone-mbr-popup-d">
 </div>
 <div data-for="pomeschenie" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <label for="pomeschenie-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Помещение / территория</label>
-<select name="pomeschenie" data-form-field="area" class="form-control display-7" id="pomeschenie-mbr-popup-d">
+<select name="pomeschenie" data-form-field="Помещение / Территория" class="form-control display-7" id="pomeschenie-mbr-popup-d" onchange="formField(this.id, 'div_metry', 'ploschad_kv_m-mbr-popup-d', 'div_sotki', 'ploschad_sotki-mbr-popup-d', 'div_room', 'komnaty-mbr-popup-d')">
 <option value="Дом / Коттедж">Дом / Коттедж</option>
 <option value="Комната">Комната</option>
 <option value="Квартира">Квартира</option>
@@ -614,7 +614,7 @@
 </div>
 <div data-for="tip_rabot" class="col-lg-12 col-md-12 col-sm-12 form-group">
 <label for="tip_rabot-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Тип обработки</label>
-<select name="tip_rabot" data-form-field="kind" class="form-control display-7" id="tip_rabot-mbr-popup-d">
+<select name="tip_rabot" data-form-field="Тип обработки" class="form-control display-7" id="tip_rabot-mbr-popup-d">
 <option value="От комаров, клещей">От комаров, клещей</option>
 <option value="От клопов и тараканов">От клопов и тараканов</option>
 <option value="От вредителей">От вредителей</option>
@@ -623,21 +623,30 @@
 <option value="От муровейников">От муровейников</option>
 </select>
 </div>
-<div data-for="ploschad" class="col-lg-12 col-md-12 col-sm-12 form-group">
-<label for="ploschad-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Площадь</label>
+<div data-for="ploschad_kv_m" class="col-lg-12 col-md-12 col-sm-12 form-group" id="div_metry">
+<label for="ploschad_kv_m-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Площадь</label>
 <div class="form-row">
-<input type="range" name="ploschad" min="0" max="300" step="1" data-form-field="square" class="col display-7" value="50" id="ploschad-mbr-popup-d">
+<input type="range" name="ploschad_kv_m" min="0" max="300" step="1" data-form-field="Площадь в кв.м." class="col display-7" value="0" id="ploschad_kv_m-mbr-popup-d">
 <div class="col-auto">кв.м.
-<span class="value form-control">50</span>
+<span class="value form-control">0</span>
 </div>
 </div>
 </div>
-<div data-for="komnaty" class="col-lg-12 col-md-12 col-sm-12 form-group">
+<div data-for="ploschad_sotki" class="col-lg-12 col-md-12 col-sm-12 form-group" id="div_sotki" hidden>
+<label for="ploschad_sotki-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Площадь</label>
+<div class="form-row">
+<input type="range" name="ploschad_sotki" min="0" max="100" step="1" data-form-field="Площадь в сотках" class="col display-7" value="0" id="ploschad_sotki-mbr-popup-d" disabled>
+<div class="col-auto">сотки
+<span class="value form-control">0</span>
+</div>
+</div>
+</div>
+<div class="col-lg-12 col-md-12 col-sm-12 form-group" data-for="komnaty" id="div_room">
 <label for="komnaty-mbr-popup-d" class="form-control-label mbr-fonts-style display-7">Количество комнат</label>
 <div class="form-row">
-<input type="range" name="komnaty" min="0" max="10" step="1" data-form-field="komnaty" class="col display-7" value="3" id="komnaty-mbr-popup-d">
+<input type="range" name="komnaty" min="0" max="10" step="1" data-form-field="Количество комнат" class="col display-7" value="0" id="komnaty-mbr-popup-d">
 <div class="col-auto">
-<span class="value form-control">3</span>
+<span class="value form-control">0</span>
 </div>
 </div>
 </div>
@@ -674,7 +683,8 @@
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   <script src="assets/formoid.min.js"></script>
-  
+  <script src="assets/functions.js"></script>
+
   
  <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
     <input name="animation" type="hidden">
