yandex search system settings

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
   
-  <meta name="description" content="Избавим вашу территорию от клещей, клопов, вредителей, неприятных запахов и вирусов">
-<meta name="Keywords" content="дезинсекция в Барнауле,   дезинфекция в Барнауле,  от клещей, от клопов, от вредителей, от неприятных запахов, дезслужба"> 
+    <meta name="description" content="Избавим вашу территорию от клещей, клопов, вредителей, неприятных запахов и вирусов">
+    <meta name="Keywords" content="дезинсекция в Барнауле,   дезинфекция в Барнауле,  от клещей, от клопов, от вредителей, от неприятных запахов, дезслужба">
+    <meta name="yandex-verification" content="7c4ae8c39e10403e" />
 
 </head>
 <body>
