google search system settings

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <meta name="description" content="Избавим вашу территорию от клещей, клопов, вредителей, неприятных запахов и вирусов">
     <meta name="Keywords" content="дезинсекция в Барнауле,   дезинфекция в Барнауле,  от клещей, от клопов, от вредителей, от неприятных запахов, дезслужба">
     <meta name="yandex-verification" content="7c4ae8c39e10403e" />
+    <meta name="google-site-verification" content="9Aq7tsJlLpmLBR0nASKO56bN7oYmbikaW4rB63PG6ks" />
 
 </head>
 <body>
