mail search system settings

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <meta name="Keywords" content="дезинсекция в Барнауле,   дезинфекция в Барнауле,  от клещей, от клопов, от вредителей, от неприятных запахов, дезслужба">
     <meta name="yandex-verification" content="7c4ae8c39e10403e" />
     <meta name="google-site-verification" content="9Aq7tsJlLpmLBR0nASKO56bN7oYmbikaW4rB63PG6ks" />
+    <meta name='wmail-verification' content='0088cf7388fadf6fd5442383379bf4cc' />
 
 </head>
 <body>
