yandex metrika counter

--- a/index.html
+++ b/index.html
@@ -33,6 +33,22 @@
     <meta name="google-site-verification" content="9Aq7tsJlLpmLBR0nASKO56bN7oYmbikaW4rB63PG6ks" />
     <meta name='wmail-verification' content='0088cf7388fadf6fd5442383379bf4cc' />
 
+        <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+       (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+       m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+       (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+       ym(64907332, "init", {
+            clickmap:true,
+            trackLinks:true,
+            accurateTrackBounce:true,
+            webvisor:true
+       });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/64907332" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
 </head>
 <body>
   <section class="extMenu1 menu cid-s0PEos5wo6" once="menu" id="extMenu7-4">
@@ -44,12 +60,12 @@
             <div class="menu-logo">
                 <div class="navbar-brand">
                     <span class="navbar-logo">
-                        <a href="#">
+                        <a href="/">
                             <img src="assets/images/logo-122x103.png" alt="" title="" style="height: 3.8rem;">
                         </a>
                     </span>
                     <div style="flex-direction: column;">
-                    <span class="navbar-caption-wrap"><a href="#" class="brand-link mbr-black display-4"><b>ДЕЗслужба</b><br>лето без комаров</a></span>
+                    <span class="navbar-caption-wrap"><a href="/" class="brand-link mbr-black display-4"><b>ДЕЗслужба</b><br>лето без комаров</a></span>
 
                     <span class="navbar-caption-wrap">
                         <a href="tel:+7 (3852) 602-004" class="brand-link text-primary display-4"><strong>+7(3852)602-004</strong></a></span>
@@ -487,7 +503,7 @@
                 <div class="contacts">
                     <h3 class="contacts-title mbr-fonts-style pb-2 display-5"></h3>
                     <p class="contacts-block mbr-fonts-style pb-3 display-7"><strong>
-                        Адрес:</strong> <a href="index.html#map1-x"><strong>г. Барнаул, пр. Ленина, д 195, офис 314</strong></a><br><br><strong>
+                        Адрес:</strong> <a href="/#map1-a"><strong>г. Барнаул, пр. Ленина, д 195, офис 314</strong></a><br><br><strong>
                         Телефон:</strong> <a href="tel:+7 (3852) 602-004"><strong>+7 (3852) 602-004</strong></a><br><br><strong>
                         Email:</strong> <a href="mailto:altena52@yandex.ru"><strong>altena52@yandex.ru</strong></a>
                     </p>
