--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 
     
 
-    <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(35, 35, 35);"></div>
+    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(35, 35, 35);"></div>
 
     <div class="container align-center">
         <div class="row justify-content-md-center">
@@ -237,7 +237,8 @@
             </div>
             <div class="col-md-6">
             <div class="mbr-figure">
-                    <img src="assets/images/18195917-618-512x342.png" alt="" title="">
+<!--                    <img src="assets/images/18195917-618-512x342.png" alt="" title="">-->
+                    <img src="assets/images/dez_img.jpg" alt="" title="">
             </div>
         </div>
     </div>
