--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
         <div class="media-container-row align-center mbr-white">
             <div class="col-12">
                 <p class="mbr-text mb-0 mbr-fonts-style display-7">
-                    © Copyright 2020 Esina M.V. <a href="mailto:me@electis.ru">me@electis.ru</a> - все права защищены
+                    © Разработка сайта. Есина М.В., 2020 <a href="https://m.electis.ru/" target="_blank">m.electis.ru</a> - Все права защищены
                 </p>
             </div>
         </div>
